--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "faucet-ui",
-  "version": "0.1.0",
+  "name": "sttfaucet",
+  "version": "0.1.2",
   "private": true,
   "engines": {
     "node": "18.x"
+  },
+  "author": {
+    "name": "panoptisDev",
+    "email": "panoptis.network@gmail.com",
+    "url": "https://github.com/panoptisDev"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
