--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "sttfaucet",
-  "version": "0.1.2",
+  "name": "faucet-ui",
+  "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "18.x"
-  },
-  "author": {
-    "name": "panoptisDev",
-    "email": "panoptis.network@gmail.com",
-    "url": "https://github.com/panoptisDev"
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
